Add in necessary dev-tool metadata. Start ivy conversion.